--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year new me</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alkatra:wght@500&family=Kaushan+Script&family=Lily+Script+One&family=Open+Sans:wght@800&family=Pacifico&family=Poppins:wght@500;700&family=Work+Sans:ital,wght@0,700;1,500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <header>
+        <!-- banner section -->
+        <div class="banner-container">
+            <div class="banner-details">
+                <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+                <p class="banner-info">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered
+                    alteration
+                    in some form, by injected humour, or randomised words</p>
+                <button class="banner-btn">Contact Us</button>
+            </div>
+        </div>
+
 
     </header>
     <main>
