failure section added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Alkatra:wght@500&family=Kaushan+Script&family=Lily+Script+One&family=Open+Sans:wght@800&family=Pacifico&family=Poppins:wght@500;700&family=Work+Sans:ital,wght@0,700;1,500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Alkatra:wght@500&family=Kaushan+Script&family=Lily+Script+One&family=Open+Sans:wght@800&family=Pacifico&family=Poppins:wght@500;700&family=Work+Sans:ital,wght@0,700;1,300;1,500;1,700;1,800&display=swap"
         rel="stylesheet">
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -30,7 +31,24 @@
 
     </header>
     <main>
-
+        <!-- Failure of previous year -->
+        <section class="failure-container">
+            <div class="failure-img"><img src="image/person.png" alt="">
+            </div>
+            <div class="failure-info">
+                <h1 class="failure-title">My failures of previous year</h1>
+                <p class="failure-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
+                    in a piece of
+                    classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="failure-list">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
 
