planning part done

--- a/index.html
+++ b/index.html
@@ -49,6 +49,33 @@
                 </ul>
             </div>
         </section>
+
+        <!-- planning-section -->
+        <section class="planning-container">
+            <h1 class="plan-title">My Plans</h1>
+            <div class="plan-list">
+                <div class="plans">
+                    <img src="image/icons/web.png" alt="">
+                    <h1>Web Development</h1>
+                    <p class="plan-para">I want to start</p>
+                </div>
+                <div class="plans">
+                    <img src="image/icons/js.png" alt="">
+                    <h1>Javascript</h1>
+                    <p class="plan-para">I want to learn</p>
+                </div>
+                <div class="plans">
+                    <img src="image/icons/smoke.png" alt="">
+                    <h1>Smoking Habit</h1>
+                    <p class="plan-para">I want to end</p>
+                </div>
+                <div class="plans">
+                    <img src="image/icons/ecom.png" alt="">
+                    <h1>ecommerce</h1>
+                    <p class="plan-para">I want to develop</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
