moto part added

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                 </div>
             </div>
         </section>
+        <!-- the gradient photo part -->
+        <section class="moto-container" id="moto-id">
+            <h1 class="moto-title">Awlays keep a positive mindset</h1>
+            <button class="moto-btn">Call now</button>
+        </section>
     </main>
     <footer>
 
