--- a/index.html
+++ b/index.html
@@ -82,8 +82,25 @@
             <button class="moto-btn">Call now</button>
         </section>
     </main>
-    <footer>
+    <footer class="footer-container">
+        <div class="footer-div1">
+            <h2 style="margin-bottom: 10px;">Future</h2>
+            <p style="margin-bottom: 15px;">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration
+                in some form, by injected humour, or randomised words</p>
+            <h4 style="margin-bottom: 10px;">Email : info@gmail.com</h4>
+            <h4 style="margin-bottom: 20px;">Phone : 01500 00 00 00</h4>
+            <img style="margin-right: 10px;" src="image/icons/fb.png" alt="">
+            <img style="margin-right: 10px;" src="image/icons/youtube.png" alt="">
+            <img src="image/icons/twitter.png" alt="">
 
+        </div>
+        <div class="footer-div2">
+            <h2 style="margin-bottom: 20px;">Subscribe</h2>
+            <input style="height: 30px;width: 300px;margin-bottom: 20px;" type="email" name="" id="" placeholder="  your email">
+            <br>
+            <button style="background-color: #005FAC;height: 40px;width: 110px;border: none;color: white;font-size: 15px;">Subscribe</button>
+        </div>
     </footer>
 </body>
 
