--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h2 style="margin-bottom: 20px;">Subscribe</h2>
             <input style="height: 30px;width: 300px;margin-bottom: 20px;" type="email" name="" id="" placeholder="  your email">
             <br>
-            <button style="background-color: #005FAC;height: 40px;width: 110px;border: none;color: white;font-size: 15px;">Subscribe</button>
+            <button style="background-color: #005FAC;height: 40px;width: 110px;border: none;color: white;font-size: 15px; cursor: pointer;">Subscribe</button>
         </div>
     </footer>
 </body>
