--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <button class="moto-btn">Call now</button>
         </section>
     </main>
+    <!-- footer part start here -->
     <footer class="footer-container">
         <div class="footer-div1">
             <h2 style="margin-bottom: 10px;">Future</h2>
@@ -97,9 +98,11 @@
         </div>
         <div class="footer-div2">
             <h2 style="margin-bottom: 20px;">Subscribe</h2>
-            <input style="height: 30px;width: 300px;margin-bottom: 20px;" type="email" name="" id="" placeholder="  your email">
+            <input style="height: 30px;width: 300px;margin-bottom: 20px;" type="email" name="" id=""
+                placeholder="  your email">
             <br>
-            <button style="background-color: #005FAC;height: 40px;width: 110px;border: none;color: white;font-size: 15px; cursor: pointer;">Subscribe</button>
+            <button
+                style="background-color: #005FAC;height: 40px;width: 110px;border: none;color: white;font-size: 15px; cursor: pointer;">Subscribe</button>
         </div>
     </footer>
 </body>
